# ChangeLog for dev-python/python-cinderclient
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/python-cinderclient/ChangeLog,v 1.5 2013/08/11 02:19:22 prometheanfire Exp $

*python-cinderclient-1.0.5 (11 Aug 2013)

  11 Aug 2013; Matthew Thode <prometheanfire@gentoo.org>
  +python-cinderclient-1.0.5.ebuild, -python-cinderclient-1.0.2.ebuild:
  just an update for cinderclient

*python-cinderclient-1.0.4 (16 May 2013)

  16 May 2013; Matthew Thode <prometheanfire@gentoo.org>
  +python-cinderclient-1.0.4.ebuild:
  updating cinderclient to remove conflict with novaclient

  19 Mar 2013; Matthew Thode <prometheanfire@gentoo.org>
  python-cinderclient-1.0.2.ebuild:
  changed the description in the ebuild

  21 Jan 2013; Matthew Thode <prometheanfire@gentoo.org>
  python-cinderclient-1.0.2.ebuild:
  the requests dep was inverted

*python-cinderclient-1.0.2 (21 Jan 2013)

  21 Jan 2013; Matthew Thode <prometheanfire@gentoo.org>
  +python-cinderclient-1.0.2.ebuild, +metadata.xml:
  inital add of python-cinderclient