@@ -1,26 +1,24 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST python-cinderclient-1.0.4.tar.gz 100039 SHA256 4012a78b34083f594e25c87fbd357384ddcedd49c58b3b48cda6481bc173368c SHA512 df70585a769fd53e56c592f26c58d8995bcb7d413a54ce1b38a5c5c14a3d456525108500a1be9fdcd9f35a8925e2be6cb5c5912050a7dcab08800b43512aa25f WHIRLPOOL 7b294db10ea2d10f6921960d73a3b9c9c7ff253aa1ba680989d76875868e00094de61e7e657ff480ecd79ea451b77e12201616d33023a031736fc250d509b1e1
 DIST python-cinderclient-1.0.5.tar.gz 117604 SHA256 75f59abd8ec56aeb1322b8c8f111574f2c1fd3f503fb22c672183914915d3d1f SHA512 8dcc092896241922cfaf1598a7f35cca7ebe9e94d98a5d6c7f094034ba55ba04ba5621c9cbe41bb3c6c3cf75eef3717965a7f3cab71e9e820f9a0b82aa9349e9 WHIRLPOOL 0858f2291a0b49cba1af6d4655dca134960736951398b8387cf301d11e36c89a5b851b982ec441dc1e898c13080d63d1b5821bc2c0112cc1452a39ea4d5ef431
-EBUILD python-cinderclient-1.0.4.ebuild 1231 SHA256 08e233d276b08c74ad1ede64130f3cccf77a92bb6fb6350ca08f330fc1c0bfe9 SHA512 1dffcc2160cdba505b599e0726a9f624278127f39c3acb4f16682d0198012f7f20b998e625612c945ec544868fbe7a0e5e0cc4bf9689c643fb6de39d8c951ca5 WHIRLPOOL 2dabb4b7d33d1e0a7c7d576e9247398492a2f5540b5231835e63c7eca885b8d0b41c33e027f1e9ea212cfda18a70701df41cc89458a7fe7de161ac62a92f0ddf
-EBUILD python-cinderclient-1.0.5.ebuild 1536 SHA256 bfac716578bad12ae305deecc37d9ff57c19e65d60e8553f56436010cb5ffacc SHA512 3afcecdaecf1266c1d3db8656e01f2bda1f6c7377e9c7acb579c8857a760f065d0536cf16b928f21414ce35df261b89548f345e536497bacf98316f71727ff66 WHIRLPOOL 121f20496234e0f228c54c9400cd5770cceb6c2def9e28258d341fe6e6cba8de6ee2892ffdf771abfee8ba6e2bb9745cca4091721e934addf979db14e8e6a417
-MISC ChangeLog 1090 SHA256 1aad2dfcea04491dd0f83260cbb4993236faa51c73e2e58929d1a2ae3eadad1e SHA512 bd871bf8cfd981a08d842291262f0f1af007da803efb507066f4285fca0d7a12b1f618cefd05b504e5af7b47ec47a686011be509ce45e5c0d39b75f5609469b0 WHIRLPOOL 3f97166e3a50a038686dcd27fcda6bc9f6869e204537ae873ca6c7bdba9d3c7dda7f7723eb92f8c9b9b85f54c9d21be06849fd8ad9558a591c255ea835f36de6
+EBUILD python-cinderclient-1.0.5-r1.ebuild 1575 SHA256 2fc7d153f32ab22d57b1af37a8569cf95c8fdb9eb1935157b145914f1377bbaf SHA512 54e90baa2e5770e2b1ba63490bf2a36a4e2eae75d8bc51f94d1bbded44e4bdd6766182ea6d059023b88685394bb7eee0012065fc5dfe8cfbc98606a7dfcd974c WHIRLPOOL 5788f8d27cd447e5855cd47e7e91e9f98ce28f9cebf3767cfac398e272e65ef9f82a809d6ee5f7ae39737b6a1456aa0ac8726d031c4391498ceac042eb72fa43
+MISC ChangeLog 1346 SHA256 819c7a665975b7e3e74d120ba543ecedaa8a788ea0190eed2523b4455ad569e7 SHA512 8462a2d6c34242e65bd2886519d1fa60495d8e0734a8ad62afec80acf045f908b9ce663ae0908e67339259d8e11238e6c7b43d42edaa5771106a372df13ff96d WHIRLPOOL bbff44182eb70878405fd5d48817c6b43055673215833efd3c7d54f8b5da6c90f24b1ac3fe22e635e2fe7714460dcc04fed8bdc5670483c918060408b30075af
 MISC metadata.xml 371 SHA256 3b827592d4dd8e01d59992f2d2cbc7925e790214a33f5172d9bf4255e59176ba SHA512 9abfb8b261c3a6b4708b647f593b79d8889d36101cafefb6c7c44ebe01aaa2a31a4b2b2ce5ff4fb503e66e8714fe9fb8be37daa56778e00310bf7103dce3c6d6 WHIRLPOOL 4db5c738912182ca496add6102dd875639702f43f069a7d66c0a1f651fe37a4810801ac8575fb67f17da2995606961fc0348835e5870f56abc351c4bbd48b9fc
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQIcBAEBCAAGBQJSBvTlAAoJECRx6z5ArFrD7EQP/RYhq1Vi0h6/kkEGwVH6YsPJ
-HadUnGP3tZVebgaSLdBxS8RYFt9Py/qrI8hEMNS+qOxTpWBerMNlSoGMuMkAlsY8
-Pz3vOY0GO5L0z0UL5Jvy3Klqem+3XtqR6grAEGC6wOWyrkTTbdmIVxtVcA2YWmRV
-RuowqPyVTBTsd20Usd11fDtQH0HsIQlZ4VrDsH91PiznV+RbLunC8kfWXZy630sL
-Errteh+13zr5Hp3uLOqP/JCXmplImSPHMMLIpiZjndZcGhyrsz/opvTNdITnbwOJ
-0HnZ2M/tl7tJisF2mkv9oyFjnC7fFO14qX5EUzytjcPjwVsN5MmEPztyOSVZoC6O
-iHahG4aV4ge9De64dHCtZwchLPaKWNibuE7dyTlgBcb4yOKMi9TDS45xtrnoaTc0
-35MXLkuQC9TH24nm1YZb0pJGar9w8lEFUdAXJEEaLpcN9V1XJAPXY0bwPhQf3j4K
-YLno6jE+aEPlSUOJ5wpjRAuFMAvbJ+2Q4hxU6UXn6ATfJjs9C7zqyxIb4wzFHPj3
-hCzlwlJ0dgowFGZVFR0YJQH3Yw3D2VGavnPynGPYshwU4UrIWJEHKJwhM6t2bz3s
-Bm8VjL5BwkI6P+oNNMGQnPxZT4T7XansuCpc6sqAl2OeOcjPgk1ocCnIoOOGLms4
-rvOp3qow8V4xvQE75puA
-=u6wI
+iQIcBAEBCAAGBQJSM2dUAAoJECRx6z5ArFrDhiwQAL0TE6y4LcjCHGaMUYXBnVhZ
+a//bkZ6/DTsoxXzKe+UsjEeGslCBdCE+e+GbeK0kpZn28CQgQKdejschiGpCQNeh
+yhNP+um+lCTvKr5CrXQN4rxsHKYWXjIqay8ifpRe8L33wCCIEC38Hc7946ZL4sh/
+vPklxygBlIsTEUoAC2C2BhRczZBcE/PCpSd77PP9jOJMrIuKhe0hYQlgPwG3WMpJ
+v2zTogDYDtBUhhvLIN3jMQNo8LZEU6Uo6ORobdxql3PE9/sHKTFOBysGSRYzrFr3
+Nv6ivJGUO5+/ZTZNkgKrVg1YFfjZl4SaN0FrPl0Y6RnlSgTKRiR7Og+IZtvpwBvz
+z4O64m1DaQtLX0RlpGzFvjpa5OxzmgAV9GIFHh+8JciRFzsYXowBoqwNV4zCYGRs
+vIIuIQeNzd5Vx/MDOj9a5J69IyNv3W01EWIJRikNOhphAXgnmgbfYhRiet5gncX+
+DlbfnWgBr9ee4nK2gsnEUb68gfhxzG8kSHklyBlyS6G+YgIcgccEcHbld+eCukVv
+5aP2llEB2CxLqmtOkhfHA88gq5yAH4PH2H1Tt41xRhdl8q1XmWqgA+jsMEvZqChD
+wIlq+2aJFcS3D23t9aJ/PQgL4Py/q9atsb4nBjuNE/0MKmM4RL/GUadNzAx9DXxS
++2W03MxoW0YdpD9Ny9Zg
+=Yul6
 -----END PGP SIGNATURE-----
