@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/python-cinderclient/python-cinderclient-1.0.4.ebuild,v 1.1 2013/05/16 01:21:30 prometheanfire Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/python-cinderclient/python-cinderclient-1.0.5-r1.ebuild,v 1.1 2013/09/13 19:26:45 prometheanfire Exp $
 
 EAPI=5
 PYTHON_COMPAT=( python2_7 )
@@ -15,22 +15,28 @@ LICENSE="Apache-2.0"
 SLOT="0"
 KEYWORDS="~amd64 ~x86"
 IUSE="test"
+#restricting tests til upstream can decide on a testing infra, I'm tired of adding packages that stop getting used...
+RESTRICT="test"
 
 DEPEND="dev-python/setuptools[${PYTHON_USEDEP}]
 		test? ( dev-python/fixtures[${PYTHON_USEDEP}]
 				dev-python/mock[${PYTHON_USEDEP}]
 				dev-python/nose[${PYTHON_USEDEP}]
 				dev-python/nosehtmloutput[${PYTHON_USEDEP}]
-				dev-python/nosexcover
+				dev-python/nosexcover[${PYTHON_USEDEP}]
 				dev-python/openstack-nose-plugin[${PYTHON_USEDEP}]
-				=dev-python/pep8-1.3.3
+				~dev-python/pep8-1.4.5[${PYTHON_USEDEP}]
 				>=dev-python/sphinx-1.1.2[${PYTHON_USEDEP}]
 				>=dev-python/testtools-0.9.22 )"
 RDEPEND="virtual/python-argparse[${PYTHON_USEDEP}]
+		>=dev-python/pbr-0.5[${PYTHON_USEDEP}]
+		<dev-python/pbr-0.6[${PYTHON_USEDEP}]
 		>=dev-python/prettytable-0.6[${PYTHON_USEDEP}]
 		<dev-python/prettytable-0.8[${PYTHON_USEDEP}]
-		>=dev-python/requests-0.8[${PYTHON_USEDEP}]
-		dev-python/simplejson[${PYTHON_USEDEP}]"
+		>=dev-python/requests-1.1[${PYTHON_USEDEP}]
+		<dev-python/requests-1.2.3[${PYTHON_USEDEP}]
+		>=dev-python/simplejson-2.0.9[${PYTHON_USEDEP}]
+		dev-python/six[${PYTHON_USEDEP}]"
 
 python_test() {
 	sh run_tests.sh -N -p -c
