@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/python-quantumclient/python-quantumclient-2.2.3.ebuild,v 1.1 2013/08/22 04:49:05 prometheanfire Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/python-quantumclient/python-quantumclient-2.2.3.ebuild,v 1.2 2013/09/13 19:09:14 prometheanfire Exp $
 
 EAPI=5
 PYTHON_COMPAT=( python2_7 )
@@ -28,5 +28,9 @@ RDEPEND="virtual/python-argparse[${PYTHON_USEDEP}]
 		<dev-python/d2to1-0.3[${PYTHON_USEDEP}]
 		>=dev-python/prettytable-0.6[${PYTHON_USEDEP}]
 		<dev-python/prettytable-0.8[${PYTHON_USEDEP}]
-		>=dev-python/pyparsing-1.5.6[${PYTHON_USEDEP}]
-		<dev-python/pyparsing-2.0[${PYTHON_USEDEP}]"
+		dev-python/pyparsing[${PYTHON_USEDEP}]"
+
+src_prepare() {
+	sed -i '/pyparsing/d' "${S}/requirements.txt"
+	distutils-r1_python_prepare_all
+}
