@@ -1,14 +1,0 @@
-DEFINED_PHASES=compile configure install prepare test
-DEPEND=dev-python/setuptools[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] test? ( dev-python/fixtures[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] dev-python/mock[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] dev-python/nose[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] dev-python/nosehtmloutput[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] dev-python/nosexcover dev-python/openstack-nose-plugin[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] =dev-python/pep8-1.3.3 >=dev-python/sphinx-1.1.2[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] >=dev-python/testtools-0.9.22 ) python_targets_python2_7? ( dev-lang/python:2.7 ) dev-python/python-exec:0[python_targets_python2_7(-)?,-python_single_target_python2_7(-)]
-DESCRIPTION=A client for the OpenStack Cinder API
-EAPI=5
-HOMEPAGE=https://launchpad.net/python-cinderclient
-IUSE=test python_targets_python2_7
-KEYWORDS=~amd64 ~x86
-LICENSE=Apache-2.0
-RDEPEND=virtual/python-argparse[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] >=dev-python/prettytable-0.6[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] <dev-python/prettytable-0.8[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] >=dev-python/requests-0.8[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] dev-python/simplejson[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] userland_GNU? ( >=sys-apps/coreutils-8.5 ) python_targets_python2_7? ( dev-lang/python:2.7 ) dev-python/python-exec:0[python_targets_python2_7(-)?,-python_single_target_python2_7(-)]
-REQUIRED_USE=|| ( python_targets_python2_7 )
-SLOT=0
-SRC_URI=mirror://pypi/p/python-cinderclient/python-cinderclient-1.0.4.tar.gz
-_eclasses_=distutils-r1	d260e4e05b2ca2981f6b6ab937e7ab9d	eutils	a09e9d3f51cc9119897f6970ba2f9d52	multibuild	66ecd0bd5a9e66ba44af9d01ac66360f	multilib	892e597faee02a5b94eb02ab512e7622	multiprocessing	a2130e6fc4aa4c6a24b265ca0cbcc2b6	python-r1	d533aff6767097bf232a1dcc578d6a3c	python-utils-r1	d55ee5d992fc65859c29c73a24a24299	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=dcafe2bc220d301857b2d791ad0e8023
