@@ -6,9 +6,9 @@ HOMEPAGE=https://launchpad.net/neutron
 IUSE=python_targets_python2_7
 KEYWORDS=~amd64 ~x86
 LICENSE=Apache-2.0
-RDEPEND=virtual/python-argparse[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] >=dev-python/pbr-0.5.16[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] <dev-python/pbr-0.6[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] >=dev-python/cliff-1.4[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] dev-python/httplib2[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] >=dev-python/iso8601-0.1.4[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] >=dev-python/simplejson-2.0.9[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] >=dev-python/d2to1-0.2.10[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] <dev-python/d2to1-0.3[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] >=dev-python/prettytable-0.6[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] <dev-python/prettytable-0.8[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] >=dev-python/pyparsing-1.5.6[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] <dev-python/pyparsing-2.0[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] userland_GNU? ( >=sys-apps/coreutils-8.5 ) python_targets_python2_7? ( dev-lang/python:2.7 ) dev-python/python-exec:0[python_targets_python2_7(-)?,-python_single_target_python2_7(-)]
+RDEPEND=virtual/python-argparse[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] >=dev-python/pbr-0.5.16[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] <dev-python/pbr-0.6[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] >=dev-python/cliff-1.4[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] dev-python/httplib2[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] >=dev-python/iso8601-0.1.4[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] >=dev-python/simplejson-2.0.9[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] >=dev-python/d2to1-0.2.10[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] <dev-python/d2to1-0.3[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] >=dev-python/prettytable-0.6[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] <dev-python/prettytable-0.8[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] dev-python/pyparsing[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] userland_GNU? ( >=sys-apps/coreutils-8.5 ) python_targets_python2_7? ( dev-lang/python:2.7 ) dev-python/python-exec:0[python_targets_python2_7(-)?,-python_single_target_python2_7(-)]
 REQUIRED_USE=|| ( python_targets_python2_7 )
 SLOT=0
 SRC_URI=mirror://pypi/p/python-quantumclient/python-quantumclient-2.2.3.tar.gz
 _eclasses_=distutils-r1	d260e4e05b2ca2981f6b6ab937e7ab9d	eutils	a09e9d3f51cc9119897f6970ba2f9d52	multibuild	66ecd0bd5a9e66ba44af9d01ac66360f	multilib	892e597faee02a5b94eb02ab512e7622	multiprocessing	a2130e6fc4aa4c6a24b265ca0cbcc2b6	python-r1	d533aff6767097bf232a1dcc578d6a3c	python-utils-r1	d55ee5d992fc65859c29c73a24a24299	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=9801b6b33e3d704ca3218fb2b534b8ee
+_md5_=0dd38581aa8335bad8d48cf644103560
