@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/python-quantumclient
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/python-quantumclient/ChangeLog,v 1.6 2013/08/22 04:49:05 prometheanfire Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/python-quantumclient/ChangeLog,v 1.7 2013/09/13 19:09:14 prometheanfire Exp $
+
+  13 Sep 2013; Matthew Thode <prometheanfire@gentoo.org>
+  python-quantumclient-2.2.3.ebuild:
+  fixing pyparsing dep
 
 *python-quantumclient-2.2.6 (11 Aug 2013)
 
