@@ -1,6 +1,13 @@
 # ChangeLog for dev-python/python-cinderclient
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/python-cinderclient/ChangeLog,v 1.5 2013/08/11 02:19:22 prometheanfire Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/python-cinderclient/ChangeLog,v 1.6 2013/09/13 19:26:45 prometheanfire Exp $
+
+*python-cinderclient-1.0.5-r1 (13 Sep 2013)
+
+  13 Sep 2013; Matthew Thode <prometheanfire@gentoo.org>
+  +python-cinderclient-1.0.5-r1.ebuild, -python-cinderclient-1.0.4.ebuild,
+  -python-cinderclient-1.0.5.ebuild:
+  cinderclient is now distutils-r1 happy
 
 *python-cinderclient-1.0.5 (11 Aug 2013)
 
